Support API v17 for SDP Operator (#157)
* Resolve reference and compound definition of discriminator mappings

* Unpack the properties of each discriminator mapping

* Use v17 API for unit testing

* Update v17 IdentityProvider CRD

* Update v17 Appliance CRD

* Update EntityDiscriminator with the latest v17 API spec fix

* Update API version v17 in values.yaml

* Add v17 load_entity tests

* Add ServiceUser

* Skip v12 - v16 tests until IdentityProvider API spec fix is backported

* Decouple version and image tag to allow use of customized image

* Log as debug instead of warning for already registered entity

* Unquote strings

* Remove unnecessary comments

* Reorganize values into required and optional

* Convert 0/1 values into boolean values

* Add JSON schema validation for values.yaml

* Update README with values.yaml changes

* Require .image.tag or .version to use as image tag

* Add version suffix to dump-entities

* Dont include appgate metadata in k8s dumper

* Enable v17 CRD test

* Replace underscore with period in CRD for snmp.conf

* Seperate the version suffix when validating entities

* Ignore fields added by the operator in singletons

* Add test and run black

* Fix linting issues

* Remove empty section in README

* Add entity using bytes attribute in v17

* Skip v12 and v13 CRD test as they are not supported

* Enable v16 CRD test

* Enable v15 CRD test

* Enable v14 CRD test

* Update CRDs for v14

* Add more entity tests for v14-v16

* Make v17 as a the default version in chart

* Remove references to v12 and v13 as they are unsupported

* Reinitialize the watchers if StopIteration

* Check-in CRDs into its helm chart

* Check if the generated CRDs and checked-in CRD are the same

* Package the CRD helm chart into one chart

* Only support v14 - v17

* Fix eq syntax error in CRD v14

* Change action name to operator

* operator and crd jobs should be depe

--- a/k8s/chart/values.yaml
+++ b/k8s/chart/values.yaml
@@ -1,71 +1,58 @@
-## @section SDP parameters
-
 ## SDP
 ## ref: https://github.com/appgate/sdp-operator
 ##
 sdp:
-  ## @param sdp.operator.host SDP Operator controller host (required)
-  ## @param sdp.operator.deviceId SDP Operator device id (uuid format) (required)
+## @section SDP Required Parameters
+  ## @param sdp.operator.host SDP Operator controller host
+  ## @param sdp.operator.deviceId SDP Operator device id (uuid v4 format)
   ## @param sdp.operator.version SDP Operator API version
-  ## @param sdp.operator.logLevel SDP Operator log level
-  ## @param sdp.operator.timeout SDP Operator event loop timeout
-  ## @param sdp.operator.targetTags SDP Operator target tags
-  ## @param sdp.operator.excludeTags SDP Operator exclude tags
-  ## @param sdp.operator.builtinTags SDP Operator builtin tags
-  ## @param sdp.operator.dryRun SDP Operator dry-run mode
-  ## @param sdp.operator.cleanup SDP Operator cleanup mode
-  ## @param sdp.operator.twoWaySync SDP Operator two-way-sync mode
-  ## @param sdp.operator.sslNoVerify SDP Operator ssl-no-verify mode
-  ## @param sdp.operator.caCert SDP Operator host CA cert
-  ## @param sdp.operator.fernetKey SDP Operator Fernet Key
-  ## @param sdp.operator.configMapMt SDP Operator metadata configmap
-  ## @param sdp.operator.image.tag SDP Operator image tag
-  ## @param sdp.operator.image.pullPolicy SDP Operator pull policy
   operator:
-    logLevel: info
-    timeout: "30"
-    targetTags: ""
-    excludeTags: ""
-    builtinTags: "builtin"
-    dryRun: "1"
-    twoWaySync: "1"
-    cleanup: "1"
-    sslNoVerify: "0"
     host: ""
     deviceId: ""
-    version: "v16"
+    version: v17
+
+## @section SDP Optional Parameters
+    ## @param sdp.operator.image.tag SDP Operator image tag
+    ## @param sdp.operator.image.pullPolicy SDP Operator pull policy
+    ## @param sdp.operator.image.repository SDP operator image registry
+    ## @param sdp.operator.image.pullSecrets SDP operator pull secret
     image:
-      ## @param sdp.operator.image.repository SDP operator image registry
-      ## @param sdp.operator.image.pullSecrets SDP operator pull secret
       repository: ghcr.io/appgate/sdp-operator
-      tag: latest
-      ## Optionally specify an array of imagePullSecrets.
-      ## Secrets must be manually created in the namespace.
-      ## ref: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
-      ## Example:
-      ## pullSecrets:
-      ##   - myRegistryKeySecretName
-      pullSecrets: []
-      ## Specify a imagePullPolicy
-      ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
-      ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
-      ##
+      tag: ""
+      pullSecrets: [ ]
       pullPolicy: Always
+
+    ## @param sdp.operator.logLevel SDP Operator log level
+    ## @param sdp.operator.timeout SDP Operator event loop timeout
+    ## @param sdp.operator.builtinTags SDP Operator builtin tags
+    ## @param sdp.operator.dryRun SDP Operator dry-run mode
+    ## @param sdp.operator.cleanup SDP Operator cleanup mode
+    ## @param sdp.operator.twoWaySync SDP Operator two-way-sync mode
+    ## @param sdp.operator.sslNoVerify SDP Operator ssl-no-verify mode
+    ## @param sdp.operator.targetTags SDP Operator target tags
+    ## @param sdp.operator.excludeTags SDP Operator exclude tags
+    ## @param sdp.operator.caCert SDP Operator host CA cert
+    ## @param sdp.operator.fernetKey SDP Operator Fernet Key
+    ## @param sdp.operator.configMapMt SDP Operator metadata configmap
+    logLevel: info
+    timeout: 30
+    builtinTags: builtin
+    dryRun: true
+    twoWaySync: true
+    cleanup: false
+    sslNoVerify: false
+    targetTags: ""
+    excludeTags: ""
     fernetKey: ""
     caCert: ""
     configMapMt: ""
 
 ## @section Kubernetes parameters
 
-## Specifies whether a ServiceAccount should be created
-##
 ## @param serviceAccount.create Enable the creation of a ServiceAccount for SDP pods
 serviceAccount:
   create: true
 
-## Specifies whether RBAC resources should be created
-##
 ## @param rbac.create Whether to create & use RBAC resources or not
-##
 rbac:
   create: true
