--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -59,8 +59,22 @@ jobs:
       - name: Check formatting with black
         run: |
           black --check --diff appgate tests
+      - name: Get Operator chart version
+        id: operatorChartVersion
+        uses: mikefarah/yq@master
+        with:
+          cmd: yq eval '.version' k8s/chart/Chart.yaml
+      - name: Get CRD chart version
+        id: crdChartVersion
+        uses: mikefarah/yq@master
+        with:
+          cmd: yq eval '.version' k8s/crd/Chart.yaml
+      - name: Compare Operator vs CRD chart version
+        run: |
+          [ "${{ steps.operatorChartVersion.outputs.result }}" == "${{ steps.crdChartVersion.outputs.result }}" ] || (echo "Operator and CRD chart version do not match" && exit 1)
 
-  helm:
+  operator:
+    needs: images
     runs-on: ubuntu-latest
     env:
       HELM_EXPERIMENTAL_OCI: 1
@@ -87,7 +101,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        version: ["v12", "v13", "v14", "v15", "v16", "v17"]
+        version: ["v14", "v15", "v16", "v17"]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/download-artifact@v2
@@ -119,13 +133,10 @@ jobs:
             ghcr.io/${{ github.repository }}/sdp-operator:${{ matrix.version }}
 
   crd:
-    needs: build
+    needs: images
     runs-on: ubuntu-latest
     env:
       HELM_EXPERIMENTAL_OCI: 1
-    strategy:
-      matrix:
-        version: ["v12", "v13", "v14", "v15", "v16", "v17"]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/download-artifact@v2
@@ -147,32 +158,17 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt -r requirements-build.txt
-      - name: Dump CRDs
+      - name: Compare CRDs
         run: |
-          python3 -m appgate --spec-directory api_specs/${{ matrix.version }} dump-crd --version ${{ matrix.version }}
-      - name: Move CRDs to chart templates
+          for version in $(seq 14 17); do
+            python3 -m appgate --spec-directory api_specs/v${version} dump-crd --version v${version}
+            echo '{{ if eq .Values.version '\"v"${version}"\"' }}' | cat - *-crd.yml > v${version}.yaml
+            echo '{{ end }}' >> v${version}.yaml
+            cmp k8s/crd/templates/v${version}.yaml v${version}.yaml || (echo "Generated CRDs and checked-in CRDs do not match." && exit 1)
+          done
+      - name: Read crd chart version
         run: |
-          mkdir k8s/crd/templates
-          mv *-crd.yml k8s/crd/templates/
-      - name: Read operator chart version
-        run: |
-          echo "chart_version=$(grep version: k8s/chart/Chart.yaml | awk '/version:/{print $NF}')" >> $GITHUB_ENV
-      - name: Set .name
-        uses: mikefarah/yq@master
-        with:
-          cmd: yq eval -i '.name = "sdp-operator-crd-${{ matrix.version }}"' k8s/crd/Chart.yaml
-      - name: set .description
-        uses: mikefarah/yq@master
-        with:
-          cmd: yq eval -i '.description = "A Helm chart for SDP Operator CRD ${{ matrix.version }}"' k8s/crd/Chart.yaml
-      - name: Set .version
-        uses: mikefarah/yq@master
-        with:
-          cmd: yq eval -i '.version = "${{ env.chart_version }}"' k8s/crd/Chart.yaml
-      - name: Set .appVersion
-        uses: mikefarah/yq@master
-        with:
-          cmd: yq eval -i '.appVersion = "${{ matrix.version }}"' k8s/crd/Chart.yaml
+          echo "chart_version=$(grep version: k8s/crd/Chart.yaml | awk '/version:/{print $NF}')" >> $GITHUB_ENV
       - uses: azure/setup-helm@v1
         with:
           version: 3.7.2
@@ -184,4 +180,4 @@ jobs:
         run: helm package k8s/crd
       - name: Push chart
         if: ${{ github.ref == 'refs/heads/main' }}
-        run: helm push sdp-operator-crd-${{ matrix.version }}-${{ env.chart_version }}.tgz oci://ghcr.io/appgate/charts
+        run: helm push sdp-operator-crd-${{ env.chart_version }}.tgz oci://ghcr.io/appgate/charts
