Default to .Chart.AppVersion if .Values.sdp.operator.image.tag is empty

--- a/k8s/chart/templates/deployment.yaml
+++ b/k8s/chart/templates/deployment.yaml
@@ -81,7 +81,7 @@ spec:
             {{- end }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
-          image: "{{ .Values.sdp.operator.image.repository }}/sdp-operator:{{ required "A valid sdp.operator.image.tag or sdp.operator.version value is required!" (.Values.sdp.operator.image.tag | default .Values.sdp.operator.version) }}"
+          image: "{{ .Values.sdp.operator.image.repository }}/sdp-operator:{{ default .Chart.AppVersion .Values.sdp.operator.image.tag}}"
           imagePullPolicy: {{ .Values.sdp.operator.image.pullPolicy }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
