--- a/requirements.in
+++ b/requirements.in
@@ -1,6 +1,6 @@
-aiohttp
-apischema
-attrs
-cryptography
-kubernetes
+aiohttp>=3.8.1
+apischema>=0.17
+attrs>=20.3.0
+cryptography>=36.0.1
+kubernetes>=16
 typedload==2.12
