Proof of concept

--- a/docker/Dockerfile-build
+++ b/docker/Dockerfile-build
@@ -1,6 +1,6 @@
 FROM python:3.10-slim
 RUN apt-get update && \
-    apt-get install make gcc libffi-dev --yes
+    apt-get install make gcc libffi-dev git --yes
 COPY requirements-build.txt /build/
 COPY requirements.txt /build/
 RUN pip3 install -r /build/requirements-build.txt -r /build/requirements.txt
