--- a/k8s/operator/values.yaml
+++ b/k8s/operator/values.yaml
@@ -11,6 +11,48 @@ sdp:
     deviceId: ""
     version: v18
 
+## Shared SDP Operator setting
+    ## @param sdp.operator.logLevel The log level of the operator.
+    ## @param sdp.operator.timeout The duration in seconds that the operator will wait for a new event. The operator will compute the plan if the timeout expires. The timer is reset to 0 every time an event if received.
+    ## @param sdp.operator.builtinTags The list of tags that defines a built-in entity. Built-in entities are never deleted.
+    ## @param sdp.operator.targetTags The list of tags that define the entities to sync. Tagged entities will be synced.
+    ## @param sdp.operator.excludeTags The list of tags that define the entities to exclude from syncing. Tagged entities will be ignored.
+    ## @param sdp.operator.sslNoVerify Whether to verify the SSL certificate of the controller.
+    logLevel: info
+    timeout: 30
+    builtinTags:
+      - builtin
+    sslNoVerify: false
+    targetTags: []
+    excludeTags: []
+
+    ## @param sdp.operator.mode The mode of the operator: run (Push configuration to SDP) | sync (Sync configuration from SDP to Git)
+    mode: run
+
+  ## Configuration for Run mode
+    ## @param sdp.operator.dryRun Whether to run the operator in Dry Run mode. The operator will compute the plan but will not make REST calls to the controller to sync the state.
+    ## @param sdp.operator.cleanup Whether to delete entities from the controller to sync the entities on the operator.
+    ## @param sdp.operator.twoWaySync Whether to read the current configuration from the controller before computing the plan.
+    run:
+      dryRun: true
+      twoWaySync: true
+      cleanup: false
+
+  ## Configuration for Sync mode
+    ## @param sdp.operator.sync.git.type The vendor of the git repository: github
+    ## @param sdp.operator.sync.git.baseBranch Base branch of the repository to create pull requests
+    ## @param sdp.operator.sync.git.repositoryUrl The url of the git repository (HTTPS only supported)
+    ## @param sdp.operator.sync.git.secret The secret to pull and push the git repository
+    ## @param sdp.operator.sync.github.repository The name of the GitHub repository (e.g. appgate/sdp-operator)
+    sync:
+      git:
+        vendor: ""
+        baseBranch: ""
+        repositoryUrl: ""
+        secret: ""
+      github:
+        repository: ""
+
 ## @section SDP Optional Parameters
     ## @param sdp.operator.image.tag The image tag of the operator.
     ## @param sdp.operator.image.pullPolicy The image pull policy of the operator.
@@ -22,34 +64,14 @@ sdp:
       pullSecrets: []
       pullPolicy: Always
 
-    ## @param sdp.operator.logLevel The log level of the operator.
-    ## @param sdp.operator.timeout The duration in seconds that the operator will wait for a new event. The operator will compute the plan if the timeout expires. The timer is reset to 0 every time an event if received.
-    ## @param sdp.operator.builtinTags The list of tags that defines a built-in entity. Built-in entities are never deleted.
-    ## @param sdp.operator.dryRun Whether to run the operator in Dry Run mode. The operator will compute the plan but will not make REST calls to the controller to sync the state.
-    ## @param sdp.operator.cleanup Whether to delete entities from the controller to sync the entities on the operator.
-    ## @param sdp.operator.twoWaySync Whether to read the current configuration from the controller before computing the plan.
-    ## @param sdp.operator.sslNoVerify Whether to verify the SSL certificate of the controller.
-    ## @param sdp.operator.targetTags The list of tags that define the entities to sync. Tagged entities will be synced.
-    ## @param sdp.operator.excludeTags The list of tags that define the entities to exclude from syncing. Tagged entities will be ignored.
-    ## @param sdp.operator.caCert The controller's CA Certificate in PEM format. It may be a base64-encoded string or string as-is.
     ## @param sdp.operator.fernetKey The fernet key to use when decrypting secrets in entities.
+    ## @param sdp.operator.caCert The controller's CA Certificate in PEM format. It may be a base64-encoded string or string as-is.
     ## @param sdp.operator.configMapMt The config map to store metadata for entities.
-    logLevel: info
-    timeout: 30
-    builtinTags:
-      - builtin
-    dryRun: true
-    twoWaySync: true
-    cleanup: false
-    sslNoVerify: false
-    targetTags: []
-    excludeTags: []
     fernetKey: ""
     caCert: ""
     configMapMt: ""
 
 ## @section Kubernetes parameters
-
 ## @param serviceAccount.create Enable the creation of a ServiceAccount for SDP pods
 serviceAccount:
   create: true
