--- a/requirements.txt
+++ b/requirements.txt
@@ -23,17 +23,25 @@ certifi==2022.12.7
     #   kubernetes
     #   requests
 cffi==1.15.1
-    # via cryptography
+    # via
+    #   cryptography
+    #   pynacl
 charset-normalizer==2.1.1
     # via
     #   aiohttp
     #   requests
 cryptography==38.0.4
     # via -r requirements.in
+deprecated==1.2.13
+    # via pygithub
 frozenlist==1.3.3
     # via
     #   aiohttp
     #   aiosignal
+gitdb==4.0.9
+    # via gitpython
+gitpython==3.1.29
+    # via -r requirements.in
 google-auth==2.15.0
     # via kubernetes
 idna==3.4
@@ -56,6 +64,12 @@ pyasn1-modules==0.2.8
     # via google-auth
 pycparser==2.21
     # via cffi
+pygithub==1.57
+    # via -r requirements.in
+pyjwt==2.6.0
+    # via pygithub
+pynacl==1.5.0
+    # via pygithub
 python-dateutil==2.8.2
     # via kubernetes
 pyyaml==6.0
@@ -63,6 +77,7 @@ pyyaml==6.0
 requests==2.28.1
     # via
     #   kubernetes
+    #   pygithub
     #   requests-oauthlib
 requests-oauthlib==1.3.1
     # via kubernetes
@@ -73,6 +88,8 @@ six==1.16.0
     #   google-auth
     #   kubernetes
     #   python-dateutil
+smmap==5.0.0
+    # via gitdb
 typedload==2.12
     # via -r requirements.in
 urllib3==1.26.13
@@ -81,6 +98,8 @@ urllib3==1.26.13
     #   requests
 websocket-client==1.4.2
     # via kubernetes
+wrapt==1.14.1
+    # via deprecated
 yarl==1.8.2
     # via aiohttp
 
