--- a/k8s/operator/templates/serviceaccount-git-syncer.yaml
+++ b/k8s/operator/templates/serviceaccount-git-syncer.yaml
@@ -1,7 +1,9 @@
+{{- if eq .Values.sdp.operator.mode "git-sync" -}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "sdp-operator.serviceAccountName" .}}
+  name: {{ include "sdp-operator.serviceAccountName" .}}-git-syncer
   namespace: {{ .Release.Namespace }}
   labels:
   {{- include "sdp-operator.labels" . | nindent 4 }}
+{{- end }}
