Create entity in each directory, load more env, print configuration

--- a/k8s/operator/templates/deployment-git-syncer.yaml
+++ b/k8s/operator/templates/deployment-git-syncer.yaml
@@ -67,6 +67,8 @@ spec:
               value: "{{ . }}"
             {{- end }}
             {{- if eq .Values.sdp.operator.mode "git-sync" }}
+            - name: GIT_VENDOR
+              value: {{ .Values.sdp.operator.gitSync.git.vendor }}
             - name: GIT_REPOSITORY_URL
               value: {{ .Values.sdp.operator.gitSync.git.repositoryUrl }}
             - name: GIT_USERNAME
