Allow to deploy both operators in the helm chart

--- a/k8s/operator/templates/configmap-mt-operator.yaml
+++ b/k8s/operator/templates/configmap-mt-operator.yaml
@@ -1,4 +1,5 @@
-{{- if not .Values.sdp.operator.configMapMt }}
+{{- if not .Values.sdp.appgateOperator.configMapMt }}
+{{- if has "appgate-operator" .Values.sdp.operators }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -7,4 +8,5 @@ metadata:
   labels:
   {{- include "sdp-operator.labels" . | nindent 4 }}
 data:
+{{- end }}
 {{- end }}
