--- a/k8s/operator/templates/serviceaccount.yaml
+++ b/k8s/operator/templates/serviceaccount.yaml
@@ -5,3 +5,13 @@ metadata:
   namespace: {{ .Release.Namespace }}
   labels:
   {{- include "sdp-operator.labels" . | nindent 4 }}
+---
+{{- if has "git-operator" .Values.sdp.operators }}
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: {{ include "sdp-operator.serviceAccountName" .}}-git-operator
+  namespace: {{ .Release.Namespace }}
+  labels:
+  {{- include "sdp-operator.labels" . | nindent 4 }}
+{{- end }}
