--- a/k8s/operator/templates/deployment.yaml
+++ b/k8s/operator/templates/deployment.yaml
@@ -19,7 +19,7 @@ spec:
       labels:
         {{- include "sdp-operator.selectorLabels" . | nindent 8 }}
     spec:
-      {{- with .Values.sdp.operator.image.pullSecrets }}
+      {{- with .Values.sdp.appgateOperator.image.pullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
@@ -42,54 +42,53 @@ spec:
                   name: {{ include "sdp-operator.secret" . }}
                   key: appgate-operator-password
             - name: APPGATE_OPERATOR_HOST
-              value: {{ required "A valid .Values.sdp.operator.host entry is required!" .Values.sdp.operator.host }}
+              value: {{ required "A valid .Values.sdp.appgateOperator.host entry is required!" .Values.sdp.appgateOperator.host }}
             - name: APPGATE_OPERATOR_DEVICE_ID
-              value: {{ required "A valid .Values.sdp.operator.deviceId entry is required!" .Values.sdp.operator.deviceId }}
+              value: {{ required "A valid .Values.sdp.appgateOperator.deviceId entry is required!" .Values.sdp.appgateOperator.deviceId }}
             - name: APPGATE_OPERATOR_LOG_LEVEL
-              value: "{{ .Values.sdp.operator.logLevel }}"
+              value: "{{ .Values.sdp.appgateOperator.logLevel }}"
             - name: APPGATE_OPERATOR_TIMEOUT
-              value: "{{ .Values.sdp.operator.timeout }}"
-            {{- with .Values.sdp.operator.targetTags }}
+              value: "{{ .Values.sdp.appgateOperator.timeout }}"
+            {{- with .Values.sdp.appgateOperator.targetTags }}
             - name: APPGATE_OPERATOR_TARGET_TAGS
               value: "{{ join "," . }}"
             {{- end }}
-            {{- with .Values.sdp.operator.excludeTags }}
+            {{- with .Values.sdp.appgateOperator.excludeTags }}
             - name: APPGATE_OPERATOR_EXCLUDE_TAGS
               value: "{{ join "," . }}"
             {{- end }}
-            {{- with .Values.sdp.operator.builtinTags }}
+            {{- with .Values.sdp.appgateOperator.builtinTags }}
             - name: APPGATE_OPERATOR_BUILTIN_TAGS
               value: "{{ join "," . }}"
             {{- end }}
             - name: APPGATE_OPERATOR_DRY_RUN
-              value: "{{ .Values.sdp.operator.dryRun }}"
+              value: "{{ .Values.sdp.appgateOperator.dryRun }}"
             - name: APPGATE_OPERATOR_CLEANUP
-              value: "{{ .Values.sdp.operator.cleanup }}"
+              value: "{{ .Values.sdp.appgateOperator.cleanup }}"
             - name: APPGATE_OPERATOR_TWO_WAY_SYNC
-              value: "{{ .Values.sdp.operator.twoWaySync }}"
+              value: "{{ .Values.sdp.appgateOperator.twoWaySync }}"
             - name: APPGATE_OPERATOR_SSL_NO_VERIFY
-              value: "{{ .Values.sdp.operator.sslNoVerify }}"
+              value: "{{ .Values.sdp.appgateOperator.sslNoVerify }}"
             - name: APPGATE_OPERATOR_CONFIG_MAP
-              value: {{ default (include "sdp-operator.config-mt" .) .Values.sdp.operator.configMapMt }}
-            {{- with .Values.sdp.operator.caCert }}
+              value: {{ default (include "sdp-operator.config-mt" .) .Values.sdp.appgateOperator.configMapMt }}
+            {{- with .Values.sdp.appgateOperator.caCert }}
             - name: APPGATE_OPERATOR_CACERT
               value: "{{ . }}"
             {{- end }}
-            {{- with .Values.sdp.operator.fernetKey }}
+            {{- with .Values.sdp.appgateOperator.fernetKey }}
             - name: APPGATE_OPERATOR_FERNET_KEY
               value: "{{ . }}"
             {{- end }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
-          image: "{{ .Values.sdp.operator.image.repository }}/sdp-operator:{{ default .Chart.AppVersion .Values.sdp.operator.image.tag}}"
-          imagePullPolicy: {{ .Values.sdp.operator.image.pullPolicy }}
+          image: "{{ .Values.sdp.appgateOperator.image.repository }}/sdp-operator:{{ default .Chart.AppVersion .Values.sdp.appgateOperator.image.tag}}"
+          imagePullPolicy: {{ .Values.sdp.appgateOperator.image.pullPolicy }}
           args:
             - --spec-directory
-            - "/root/api_specs/{{ required "A valid .Values.sdp.operator.version entry is required!" .Values.sdp.operator.version }}"
-            {{- if eq .Values.sdp.operator.mode "git-sync" }}
-            - sync-entities
-            {{- else }}
-            - run
+            - "/root/api_specs/{{ required "A valid .Values.sdp.appgateOperator.version entry is required!" .Values.sdp.appgateOperator.version }}"
+            - appgate-operator
+            {{- if eq .Values.sdp.appgateOperator.reverseMode true }}
+            - reverse-mode
             {{- end }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
@@ -105,3 +104,93 @@ spec:
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+---
+{{- if has "git-operator" .Values.sdp.operators }}
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: {{ include "sdp-operator.fullname" . }}-git-operator
+  namespace: {{ .Release.Namespace }}
+  labels:
+  {{- include "sdp-operator.labels" . | nindent 4 }}
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      {{- include "sdp-operator.selectorLabels" . | nindent 6 }}
+  template:
+    metadata:
+      {{- with .Values.podAnnotations }}
+      annotations:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      labels:
+        {{- include "sdp-operator.selectorLabels" . | nindent 8 }}
+    spec:
+      {{- with .Values.sdp.gitOperator.image.pullSecrets }}
+      imagePullSecrets:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      securityContext:
+        {{- toYaml .Values.podSecurityContext | nindent 8 }}
+      serviceAccountName: {{ include "sdp-operator.serviceAccountName" . }}
+      containers:
+        - name: {{ .Chart.Name }}
+          env:
+            - name: APPGATE_OPERATOR_NAMESPACE
+              value: {{ .Release.Namespace }}
+            - name: APPGATE_OPERATOR_USER
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "sdp-operator.secret" . }}
+                  key: appgate-operator-user
+            - name: APPGATE_OPERATOR_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "sdp-operator.secret" . }}
+                  key: appgate-operator-password
+            - name: APPGATE_OPERATOR_HOST
+              value: {{ required "A valid .Values.sdp.gitOperator.host entry is required!" .Values.sdp.gitOperator.host }}
+            - name: APPGATE_OPERATOR_DEVICE_ID
+              value: {{ required "A valid .Values.sdp.gitOperator.deviceId entry is required!" .Values.sdp.gitOperator.deviceId }}
+            - name: APPGATE_OPERATOR_LOG_LEVEL
+              value: "{{ .Values.sdp.gitOperator.logLevel }}"
+            - name: APPGATE_OPERATOR_TIMEOUT
+              value: "{{ .Values.sdp.gitOperator.timeout }}"
+            - name: APPGATE_OPERATOR_TARGET_TAGS
+              value: "{{ join "," .Values.sdp.gitOperator.targetTags }}"
+            {{- with .Values.sdp.gitOperator.caCert }}
+            - name: APPGATE_OPERATOR_CACERT
+              value: "{{ . }}"
+            {{- end }}
+            - name: GIT_VENDOR
+              value: {{ .Values.sdp.operator.gitOperator.git.vendor }}
+            - name: GIT_REPOSITORY_URL
+              value: {{ .Values.sdp.gitOperator.git.repositoryUrl }}
+            - name: GIT_USERNAME
+              valueFrom:
+                secretKeyRef:
+                  name: {{ .Values.sdp.gitOperator.git.secret }}
+                  key: git-username
+            - name: GIT_TOKEN
+              valueFrom:
+                secretKeyRef:
+                  name: {{ .Values.sdp.gitOperator.git.secret }}
+                  key: git-token
+            - name: GIT_BASE_BRANCH
+              value: {{ .Values.sdp.gitOperator.git.baseBranch }}
+            {{- with .Values.sdp.gitOperator.github.repository }}
+            - name: GITHUB_REPOSITORY
+              value: {{ . }}
+            {{- end }}
+          securityContext:
+            {{- toYaml .Values.securityContext | nindent 12 }}
+          image: "{{ .Values.sdp.gitOperator.image.repository }}/sdp-operator:{{ default .Chart.AppVersion .Values.sdp.gitOperator.image.tag}}"
+          imagePullPolicy: {{ .Values.sdp.operator.image.pullPolicy }}
+          args:
+            - "git-operator"
+            - "--spec-directory"
+            - "/root/api_specs/{{ required "A valid .Values.sdp.gitOperator.version entry is required!" .Values.sdp.gitOperator.version }}"
+          resources:
+            {{- toYaml .Values.resources | nindent 12 }}
+{{ end }}
